#
# Kimchi
#
# Copyright IBM, Corp. 2013
#
# Authors:
#  Adam Litke <agl@linux.vnet.ibm.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

htmldir = $(datadir)/kimchi/ui/pages

dist_html_DATA = \
	error.html.tmpl \
	kimchi-ui.html.tmpl \
	dev-ui.html.tmpl \
	guest-add.html.tmpl \
	guest.html.tmpl \
	guests.html.tmpl \
	template-add.html.tmpl \
	template-edit.html.tmpl \
	templates.html.tmpl \
	vnc_auto.html.tmpl \
	i18n.html.tmpl \
	login-window.html.tmpl \
	$(NULL)
